--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
     <header style="text-align:center; padding: 15px 0 20px 0;">
         <h2 style="font-size:1.8rem; color:var(--primary); margin:0; font-weight: 900;">🏦 中央銀行シミュレーター</h2>
-        <div style="font-size:0.85rem; opacity:0.7; font-family: monospace;">Central Bank Governance OS v5.5 | <span id="clock">--:--:--</span></div>
+        <div style="font-size:0.85rem; opacity:0.7; font-family: monospace;">Central Bank Governance OS v1.0 | <span id="clock">--:--:--</span></div>
     </header>
 
     <div class="container">
@@ -68,7 +68,7 @@
                 <span class="rate-display" id="rate-display">0.25%</span>
                 <input type="range" id="rate-slider" min="-0.1" max="5.0" step="0.05" value="0.25">
                 
-                <h1 style="font-size: 0.9rem; border:none; padding:0; color:#666;">💬 市井の切実な要望（ボイス）</h1>
+                <h1 style="font-size: 0.9rem; border:none; padding:0; color:#666;">💬 有権者の皆様からの声</h1>
                 <div class="btn-group">
                     <button class="btn-voice" onclick="applyPolicy('stop_inf')">「物価を下げて！」<span>輸入コスト増への悲鳴</span></button>
                     <button class="btn-voice" onclick="applyPolicy('save_mort')">「ローンを下げて！」<span>利上げによる破綻の恐怖</span></button>
