--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 
     <div class="footer-note">
         ※ 実際の経済責任は分散しており、単独での制御は不可能です。マイナスの手取りは「家計の赤字」を意味します。<br>
-        © 2026 Governance Engineering Simulator
+        © 2026 SBCM Alliance
     </div>
 
     <script>
