--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>中央銀行シミュレーター - 統治工学・最終安定版</title>
+    <title>中央銀行シミュレーター</title>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <style>
         :root { --primary: #1a237e; --accent: #ffd600; --bg: #f5f7f9; --dark: #263238; --error: #d32f2f; --success: #2e7d32; --market: #0288d1; --real: #f4511e; --gov: #673ab7; }
@@ -40,7 +40,7 @@
 
     <header style="text-align:center; padding: 10px 0 20px 0;">
         <h2 style="font-size:1.6rem; color:var(--primary); margin:0; font-weight: 900;">🏦 中央銀行シミュレーター</h2>
-        <div style="font-size:0.8rem; opacity:0.6; font-family: monospace;">Policy Integrated Monitor v8.5 | <span id="clock">--:--:--</span></div>
+        <div style="font-size:0.8rem; opacity:0.6; font-family: monospace;">Policy Integrated Monitor v2.0 | <span id="clock">--:--:--</span></div>
     </header>
 
     <div class="container">
@@ -102,7 +102,7 @@
     </div>
     <footer class="footer-note">
         ※ 実際の経済責任は分散しており、単独での制御は不可能です。マイナスの手取りは「家計の破綻」を意味します。<br>
-        © 2026 Governance Engineering Simulator
+        © 2026 SBCM Alliance
     </footer>
 
     <script>
