--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
     <header style="text-align:center; padding: 10px 0;">
         <h2 style="font-size:1.4rem; color:var(--primary); margin:0; font-weight: 900;">🏦 中央銀行シミュレーター</h2>
-        <div style="font-size:0.75rem; opacity:0.6; font-family: monospace;">v8.8 Fixed | <span id="clock">--:--:--</span></div>
+        <div style="font-size:0.75rem; opacity:0.6; font-family: monospace;">v2.0 | <span id="clock">--:--:--</span></div>
     </header>
 
     <div class="container">
@@ -66,7 +66,7 @@
 
             <!-- 政府の財布 -->
             <div class="card" style="border-top: 5px solid #43a047;">
-                <h1>👛 政府の財布</h1>
+                <h1>👛 政府の財布（1世帯あたりの月間予算に換算）</h1>
                 <div class="wallet-grid">
                     <div class="wallet-stat bg-income"><small>税収</small><span class="amount" id="gov-income">--万</span></div>
                     <div class="wallet-stat bg-outcome"><small>支出</small><span class="amount" id="gov-outcome">--万</span></div>
@@ -116,7 +116,7 @@
     </div>
     <footer class="footer-note">
         ※ 実際の経済責任は分散しており、単独での制御は不可能です。<br>
-        © 2026 Governance Engineering Simulator | Based on SBCM Principles.
+        © 2026 SBCM Alliance
     </footer>
 
     <script>
